# train_baiducnn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: .#train.prototxt
include/: feature_generator_pb.h  util.h
pytorch/: BCNN.py  BcnnLoss.py  NuscData.py  pytorch2onnx.py  train_bcnn.py  weighted_mse.py
pytorch/checkpoints/: README.md
script/: .python-version  baidu_cnn_util.py  cnn_seg_detector.py  cnn_seg_detector_node.py  confidence_class_nusc.py  confidence_class_nusc_split.py  confidence_from_allnusc.py  confidence_from_allnusc_val.py  confidence_from_nusc.py  confidence_from_nusc_with_view.py  create_dataset_from_nusc.py  feature_generator.py  pred_confidence.py  pred_confidence_from_pc.py  readh5.py  readh5_for_allconf.py  readh5_withclass.py  traindata_from_nusc.py
script/custom_layers/: weighted_euclidean_loss.py  weighted_euclidean_loss_ver2.py
script/data/: nusc_baidu.txt  nusc_baidu_confidence.txt  simple_network.prototxt  solver_confidence.prototxt  solver_simple.prototxt  train.prototxt  train_confidence.prototxt  visualize_log.py
script/logs/: visualize_log.py
scripts/: baidu_cnn_util.py  feature_generator.py
scripts/create_dataset/: create_dataset_from_nusc.py  feature_generator.py
scripts/pytorch/: BCNN.py  BcnnLoss.py  NuscData.py  create_inference_feature.py  pytorch2onnx.py  start_server.sh  train_bcnn.py  vis_model_torchviz.py
scripts/utils/: visualize_utils.py
scripts/utils/data/: category_pt.npy  confidence_pt.npy  instance_pt_x.npy  instance_pt_y.npy  (+1 more)
src/: feature_generator_pb.cpp
